--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-community/cli": "latest"
+    "@react-native-community/cli": "latest",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
