--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@expo/config-plugins": "^9.0.15",
     "@expo/metro-runtime": "~4.0.1",
     "@expo/prebuild-config": "^8.0.26",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-community/voice": "^1.1.9",
     "@react-native-firebase/app": "^21.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -36,6 +38,7 @@
     "expo-dev-client": "~5.0.11",
     "expo-device": "~7.0.2",
     "expo-font": "~13.0.2",
+    "expo-image-picker": "~16.0.5",
     "expo-linear-gradient": "~14.0.2",
     "expo-mail-composer": "~14.0.2",
     "expo-notifications": "~0.29.13",
@@ -44,16 +47,20 @@
     "expo-video": "~2.0.5",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
+    "lottie-react-native": "7.1.0",
     "node-cron": "^3.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.7.0",
     "react-native-web": "~0.19.10",
