--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-native-community/slider": "^4.5.5",
-    "@react-native-community/voice": "^1.1.9",
     "@react-native-firebase/app": "^21.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -45,14 +44,13 @@
     "expo-server-sdk": "^3.13.0",
     "expo-status-bar": "~2.0.1",
     "expo-video": "~2.0.5",
-    "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "lottie-react-native": "7.1.0",
     "node-cron": "^3.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hot-toast": "^2.5.1",
     "react-native": "0.76.7",
+    "react-native-calendars": "^1.1308.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^8.0.0",
     "react-native-paper": "^5.12.5",
@@ -66,7 +64,6 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.12.5",
     "react-native-youtube-iframe": "^2.3.0",
-    "react-rewards": "^2.1.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
