--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@expo/config-plugins": "^9.0.15",
     "@expo/metro-runtime": "~4.0.1",
     "@expo/prebuild-config": "^8.0.26",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-native-community/slider": "^4.5.5",
@@ -31,13 +31,13 @@
     "@react-navigation/stack": "^6.4.1",
     "@shopify/react-native-skia": "1.5.0",
     "@supabase/supabase-js": "^2.46.1",
-    "expo": "~52.0.31",
+    "expo": "~52.0.36",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.11",
+    "expo-dev-client": "~5.0.12",
     "expo-device": "~7.0.2",
     "expo-font": "~13.0.2",
-    "expo-image-picker": "~16.0.5",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-mail-composer": "~14.0.2",
     "expo-notifications": "~0.29.13",
@@ -56,6 +56,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^4.0.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.2.1",
