--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "surveyapp",
+  "name": "greentrack",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -31,19 +31,19 @@
     "@react-navigation/stack": "^6.4.1",
     "@shopify/react-native-skia": "1.5.0",
     "@supabase/supabase-js": "^2.46.1",
-    "expo": "~52.0.36",
+    "expo": "~52.0.38",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.12",
+    "expo-dev-client": "~5.0.14",
     "expo-device": "~7.0.2",
     "expo-font": "~13.0.2",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-mail-composer": "~14.0.2",
-    "expo-notifications": "~0.29.13",
+    "expo-notifications": "~0.29.14",
     "expo-server-sdk": "^3.13.0",
     "expo-status-bar": "~2.0.1",
-    "expo-video": "~2.0.5",
+    "expo-video": "~2.0.6",
     "formik": "^2.4.6",
     "lottie-react-native": "7.1.0",
     "node-cron": "^3.0.3",
